--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "lint": "expo lint"
+    "check:lint": "biome lint --write ./",
+    "check:format": "biome format --write ./",
+    "check:imports": "biome check --formatter-enabled=false --linter-enabled=false --write ./",
+    "check:ts": "tsc --noEmit",
+    "check:all": "bun check:imports && bun check:format && bun check:lint && bun check:ts"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.21",
@@ -30,10 +34,9 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.4.3",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
