--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "build:release": "expo run:ios --device --configuration Release",
     "check:lint": "biome lint --write ./",
     "check:format": "biome format --write ./",
     "check:imports": "biome check --formatter-enabled=false --linter-enabled=false --write ./",
