--- a/app.json
+++ b/app.json
@@ -5,12 +5,11 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "travelrate",
+    "scheme": "koin",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nolliebigspin.koin",
-      "appleTeamId": "74H6Q6Y6VF"
+      "bundleIdentifier": "com.nolliebigspin.koin"
     },
     "android": {
       "adaptiveIcon": {
@@ -18,7 +17,7 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.nolliebigspin.travelrate"
+      "package": "com.nolliebigspin.koin"
     },
     "web": {
       "output": "static",
